	1308 Golden Axe:		NO INFO. Item not implemented...
	13160, 13161 Destroyer:	Can break target's armor when fired at close range.
	-----
	4296 Cramp Card:	Temp Plug: 10z per mob-level on a 3% chance.
	7458 Fortune Horn:	It's a custom name ^^;
	12017 Speed Decreasing Potion: A potion which decreases the moving speed of a character for a duration.
	-----

=========================
06/14
	* Fixed the awfully coded Baseball Cap script [Playtester]
	- please use CONSTANTS!
	- please use RC_Nonboss and RC_Boss for "all mobs" instead of listing all the races!
	- please don't stack RC_Nonboss with RC_(some race)!
06/13
	* Detale only summons one Hydro [Playtester]
	* Fixed the names of the Lotto items [Playtester]
	* Garm Claw now has 152 Attack Power rather than 115 [Playtester]
06/12
	* SL_STIN/SL_STUN have dex-reducable casting times now. [Skotlex]
	* Temp sprite names for Rachel/Ice Dungeon monsters, thanks to Saycyber21. [Vicious]
	- Chung E = temp sprites.
	* Fixed the mode of Monemus [MasterOfMuppets]
06/11
	* Commented some unused mobs in the mob_db [Playtester]
	* Goggles are worth 10k now [Playtester]
06/10
	* Slotted Crown and Tiara only have +1 int [Playtester]
	* Added the new cards to the drops [Playtester]
06/08
	* Implemented Electric Wire [Playtester]
06/07
	* Stormy Knight card now freezes when attack rather then when hit [Playtester]
06/06
	* Fixed Owl Duke not having boss mode [Playtester]
	* Fixed Osiris's slaves [Playtester]
	* Hopefully fixed all the Unbreakable bonuses [Playtester]
	* Fixed Valkyrie skills and Magnum Break of all mobs [Playtester]
	* Sunflower Hairpin now can't be refined anymore [Playtester]
06/05
	* Added some sign quest related item restrictions. [MasterOfMuppets]
	* Fixed the item bonus of baseball cap. [MasterOfMuppets]
	* A typo fix, thanks to DracoRPG. [MasterOfMuppets]
06/03
	* Fixed Archdam Card [Playtester]
	* Fixed Skeggiold's drops [Playtester]
	* MVP Jupitel now does 30 Hits [Playtester]
06/02