@@ -4,6 +4,15 @@ AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO 
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
 2006/06/16
+	* Modified the bNoMagicDamage/bNoWeaponDamage bonuses to be a 0-100
+	  setting. Meaning you can do bonus bNoMagicDamage,50; To make all magic
+	  damage be reduced by half. This bonus stack, so two cards with
+	  bNoMagicDamage,50 will give magic immunity. [Skotlex]
+	* Removed setting gtb_pvp_only and replaced it with gtb_sc_immunity which
+	  specifies the threshold before the bNoMagicDamage starts blocking support
+	  statuses as well. ie: gtb_sc_imunity: 75 will mean that "bonus
+	  bNoMagicDamage,70;" reduces magic damage by 70%, but does not blocks heal
+	  or support status, while "bonus bNoMagicDamage,80;" does. [Skotlex]
 	* Removed db_tables.sql as it's no longer used. [Skotlex]
 	* the mvp_sd is removed when the mob is the emperium and there's no
 	  killer/exp-awarded (assumed killed by script), this prevents the on-kill
