@@ -76,10 +76,10 @@ item_use_interval: 100
 // The ghostring fix makes mob attacks not be affected by ghostring armor wearing players.
 mob_ghostring_fix: yes
 
-// Does the Golden Thief Bug card only work during pvp?
-// no or 0 - gtb works all the time
-// 1 - 100 - percentage of magic damage reduced only during pvp (or gvg)
-gtb_pvp_only: no
+//Required level of bNoMagicDamage before Status Changes are blocked (Golden Thief Bug card).
+//For example, if left at 50. An item can give bNoMagicDamage,40;
+// which reduces magic damage by 40%, but does not blocks status changes.
+gtb_sc_immunity: 50
 
 // Enable autospell card effects to stack?
 // NOTE: Different cards that grant the same skill will both 
